# team-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
Formula/: team-cli.rb
completions/: team.bash
team_cli/: __init__.py  __main__.py  api.py  audit.py  auth.py  cli.py  config.py  interactive.py  queries.py  sync.py
