[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-cli"
version = "0.3.2"
description = "CLI for AWS TEAM (Temporary Elevated Access Management)"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.28",
    "InquirerPy>=0.3.4",
]

[project.scripts]
team = "team_cli.cli:main"

[tool.setuptools.packages.find]
include = ["team_cli*"]
